--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <body>
     <body oncontextmenu="return false;">
       <div id="cookiesContainer"></div>
+      <div class="sideBySide">
       <div id="toDoContainer"></div>
-
+      <div class="settingsContainer"></div>
+    </div>
+ 
   </body>
 </html>
